--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@mui/material": "^5.14.4",
+    "@reduxjs/toolkit": "^1.9.6",
     "axios": "^1.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^8.1.3",
     "react-router-dom": "^6.15.0",
     "vite-plugin-svgr": "^3.2.0"
   },
